Fixed quiz upload bar. Forwarded messages from server regarding upload success. Fixed spacing on 'page not found'. Fixed quiz upload view. as it got overwritten...again. Reformatted quiz page.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -13,6 +13,10 @@ section {
     margin-top: 20px;
 }
 
+.error-only{
+    margin-top: 34px;
+}
+
 #foot {
     height: 90px;
     position: relative;
